feat: endpoint for purchasing free ticket
